adding utility to produce test results for our models.

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -14,12 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils import (\n",
-    "    get_cross_validation_results, \n",
+    "    get_cross_validation_results,\n",
+    "    get_final_model_performance,\n",
     "    TransactionDataset,\n",
     "    TuneHyperParams,\n",
     ")\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,13 +40,12 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import OneHotEncoder, OrdinalEncoder, FunctionTransformer, Normalizer\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.compose import make_column_transformer, make_column_selector\n",
-    "from sklearn.metrics import f1_score"
+    "from sklearn.compose import make_column_transformer, make_column_selector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "log_transform = FunctionTransformer(\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "regression_model = LogisticRegression(\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "log_and_ordinal_model_pipeline = Pipeline(\n",
@@ -257,19 +257,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fit_time: 5.173618936538697\n",
-      "score_time: 0.006949734687805176\n",
+      "fit_time: 5.054137134552002\n",
+      "score_time: 0.007306718826293945\n",
       "test_accuracy: 0.880068627615484\n",
       "test_balanced_accuracy: 0.8317220389462638\n",
-      "test_f1: 0.6648300886446668\n",
-      "The final Log model F1 score is: 0.6816568047337278\n"
+      "test_f1: 0.6648300886446668\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "                                Test     Score\n0                           F1 Score  0.681657\n1                           Accuracy  0.889799\n2                  Balanced Accuracy  0.787254\n3  Matthew's Correlation Coefficient  0.619925",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Test</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.681657</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.889799</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.787254</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.619925</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -299,11 +307,11 @@
     "    data.TRAINING.outcome\n",
     ")\n",
     "\n",
-    "final_log_model_pipeline.fit(data.TRAINING.predictors, data.TRAINING.outcome)\n",
-    "\n",
-    "predictions = final_log_model_pipeline.predict(data.TESTING.predictors)\n",
-    "\n",
-    "print(f\"The final Log model F1 score is: {f1_score(predictions, data.TESTING.outcome)}\")"
+    "get_final_model_performance(\n",
+    "    final_log_model_pipeline,\n",
+    "    data.TRAINING,\n",
+    "    data.TESTING\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false
@@ -311,19 +319,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fit_time: 0.3940718412399292\n",
-      "score_time: 0.007635927200317383\n",
+      "fit_time: 0.39056107997894285\n",
+      "score_time: 0.00755312442779541\n",
       "test_accuracy: 0.878942836887763\n",
       "test_balanced_accuracy: 0.7779587663627822\n",
-      "test_f1: 0.6198352238036511\n",
-      "The final Norm model F1 score is: 0.6345381526104417\n"
+      "test_f1: 0.6198352238036511\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "                                Test     Score\n0                           F1 Score  0.634538\n1                           Accuracy  0.888161\n2                  Balanced Accuracy  0.789735\n3  Matthew's Correlation Coefficient  0.568762",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Test</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.634538</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.888161</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.789735</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.568762</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -353,11 +369,11 @@
     "    data.TRAINING.outcome\n",
     ")\n",
     "\n",
-    "final_norm_model_pipeline.fit(data.TRAINING.predictors, data.TRAINING.outcome)\n",
-    "\n",
-    "predictions = final_norm_model_pipeline.predict(data.TESTING.predictors)\n",
-    "\n",
-    "print(f\"The final Norm model F1 score is: {f1_score(predictions, data.TESTING.outcome)}\")"
+    "get_final_model_performance(\n",
+    "    final_norm_model_pipeline,\n",
+    "    data.TRAINING,\n",
+    "    data.TESTING\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false
@@ -365,19 +381,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fit_time: 0.048649048805236815\n",
-      "score_time: 0.009540128707885741\n",
+      "fit_time: 0.05665748119354248\n",
+      "score_time: 0.010228633880615234\n",
       "test_accuracy: 0.879147650049499\n",
       "test_balanced_accuracy: 0.8346525059058598\n",
-      "test_f1: 0.6657237530635807\n",
-      "The final PCA model F1 score is: 0.6814988290398126\n"
+      "test_f1: 0.6657237530635807\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "                                Test     Score\n0                           F1 Score  0.681499\n1                           Accuracy  0.888570\n2                  Balanced Accuracy  0.785155\n3  Matthew's Correlation Coefficient  0.619932",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Test</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.681499</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.888570</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.785155</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.619932</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -408,12 +432,21 @@
     "    data.TRAINING.outcome\n",
     ")\n",
     "\n",
-    "final_pca_model_pipeline.fit(data.TRAINING.predictors, data.TRAINING.outcome)\n",
-    "\n",
-    "predictions = final_pca_model_pipeline.predict(data.TESTING.predictors)\n",
-    "\n",
-    "print(f\"The final PCA model F1 score is: {f1_score(predictions, data.TESTING.outcome)}\")"
+    "get_final_model_performance(\n",
+    "    final_pca_model_pipeline,\n",
+    "    data.TRAINING,\n",
+    "    data.TESTING\n",
+    ")"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
