adding analysis of logistic regression

--- a/logistic_regression_with_smote.ipynb
+++ b/logistic_regression_with_smote.ipynb
@@ -5,8 +5,14 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "from utils import (\n",
+    "    get_cross_validation_results,\n",
+    "    TransactionDataset,\n",
+    "    TuneHyperParams,\n",
+    "    get_final_model_performance\n",
+    ")\n",
+    "\n",
+    "from constants import Columns, ModelConstants, ResamplingStrategy"
    ],
    "metadata": {
     "collapsed": false
@@ -15,47 +21,24 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import (\n",
-    "    get_cross_validation_results, \n",
-    "    TransactionDataset,\n",
-    "    TuneHyperParams,\n",
-    ")\n",
-    "\n",
-    "from constants import Resample, Columns, ModelConstants"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import OneHotEncoder, OrdinalEncoder, FunctionTransformer, Normalizer\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import (\n",
+    "    OneHotEncoder,\n",
+    "    OrdinalEncoder,\n",
+    "    FunctionTransformer,\n",
+    "    Normalizer,\n",
+    "    PowerTransformer,\n",
+    "    RobustScaler\n",
+    ")\n",
+    "\n",
     "from sklearn.compose import make_column_transformer, make_column_selector\n",
-    "from sklearn.metrics import f1_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = TransactionDataset().get_training_test_split(resample=Resample.smote)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Defining Column Transformations"
+    "\n",
+    "from imblearn.pipeline import Pipeline\n",
+    "from imblearn.over_sampling import SMOTE, ADASYN"
    ],
    "metadata": {
     "collapsed": false
@@ -63,22 +46,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "data = TransactionDataset().get_training_test_split()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "log_transform = FunctionTransformer(\n",
     "    func=np.log1p, inverse_func=np.expm1, check_inverse=False\n",
     ")\n",
     "\n",
+    "order_mapping = [['0', '0.2', '0.4', '0.6', '0.8', '1']]\n",
+    "\n",
+    "norm_and_one_hot_transforms = make_column_transformer(\n",
+    "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
+    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (Normalizer(), make_column_selector(dtype_include=\"number\"))\n",
+    ")\n",
+    "\n",
     "log_and_ordinal_transforms = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
-    "    (OrdinalEncoder(), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
     "    (log_transform, make_column_selector(dtype_include=\"number\"))\n",
     ")\n",
     "\n",
-    "norm_and_one_hot_transforms = make_column_transformer(\n",
-    "    (OneHotEncoder(), [Columns.SPECIFIC_HOLIDAY, Columns.CUSTOMER_TYPE]),\n",
-    "    (Normalizer(), make_column_selector(dtype_include=\"number\"))\n",
+    "power_transforms = make_column_transformer(\n",
+    "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
+    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (PowerTransformer(), make_column_selector(dtype_include=\"number\"))\n",
+    ")\n",
+    "\n",
+    "robust_transformation = make_column_transformer(\n",
+    "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
+    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (RobustScaler(), make_column_selector(dtype_include=\"number\"))\n",
     ")"
    ],
    "metadata": {
@@ -87,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "regression_model = LogisticRegression(\n",
@@ -102,19 +111,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "smote_sampling = SMOTE(random_state=ModelConstants.RANDOM_STATE)\n",
+    "adasyn_sampling = ADASYN(random_state=ModelConstants.RANDOM_STATE)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "outputs": [],
    "source": [
-    "log_and_ordinal_model_pipeline = Pipeline(\n",
+    "smote_column_transforms_model = Pipeline(\n",
     "    [\n",
     "        (\"column_transformation\", log_and_ordinal_transforms),\n",
-    "        (\"logistic_regression\", regression_model)\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "norm_and_one_hot_model_pipeline = Pipeline(\n",
-    "    [\n",
-    "        (\"column_transformation\", norm_and_one_hot_transforms),\n",
+    "        (\"sampling\", smote_sampling),\n",
     "        (\"logistic_regression\", regression_model)\n",
     "    ]\n",
     ")"
@@ -129,50 +144,32 @@
    "outputs": [],
    "source": [
     "tuning_params = {\n",
+    "    \"column_transformation\": [\n",
+    "        log_and_ordinal_transforms,\n",
+    "        norm_and_one_hot_transforms,\n",
+    "        power_transforms,\n",
+    "        robust_transformation\n",
+    "    ],\n",
+    "\n",
+    "    \"sampling\": [\n",
+    "        smote_sampling,\n",
+    "        adasyn_sampling,\n",
+    "    ],\n",
+    "    \"sampling__sampling_strategy\": [\n",
+    "        ResamplingStrategy.MINORITY_ONLY,\n",
+    "        ResamplingStrategy.ALL,\n",
+    "        0.2,\n",
+    "        0.3,\n",
+    "        0.4,\n",
+    "        0.5,\n",
+    "        0.6,\n",
+    "        0.7\n",
+    "    ],\n",
+    "\n",
     "    \"logistic_regression__penalty\": [\"l1\", \"l2\"],\n",
     "    \"logistic_regression__solver\": [\"saga\", \"liblinear\"],\n",
     "    \"logistic_regression__C\": [0.1, 0.5, 1, 1.5, 2, 2.5, 3],\n",
-    "    \"logistic_regression__class_weight\": [\n",
-    "        \"balanced\",\n",
-    "        {1: 0.55, 0: 0.45},\n",
-    "        {1: 0.6, 0: 0.4},\n",
-    "        {1: 0.65, 0: 0.35},\n",
-    "        {1: 0.7, 0: 0.3},\n",
-    "        {1: 0.75, 0: 0.25},\n",
-    "        {1: 0.8, 0: 0.2},\n",
-    "    ],\n",
     "}"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'logistic_regression__C': 0.1, 'logistic_regression__class_weight': {1: 0.6, 0: 0.4}, 'logistic_regression__penalty': 'l2', 'logistic_regression__solver': 'liblinear'}\n",
-      "Best parameter (CV score: 0.876):\n"
-     ]
-    }
-   ],
-   "source": [
-    "gs = (\n",
-    "    TuneHyperParams()\n",
-    "    .full_grid_search(\n",
-    "     log_and_ordinal_model_pipeline,\n",
-    "     tuning_params\n",
-    "    )\n",
-    "    .fit_model(\n",
-    "        data.TRAINING.predictors,\n",
-    "        data.TRAINING.outcome\n",
-    "    )\n",
-    "    .get_best_scores_and_params()\n",
-    ")"
    ],
    "metadata": {
     "collapsed": false
@@ -186,122 +183,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'logistic_regression__C': 3, 'logistic_regression__class_weight': {1: 0.55, 0: 0.45}, 'logistic_regression__penalty': 'l1', 'logistic_regression__solver': 'liblinear'}\n",
-      "Best parameter (CV score: 0.818):\n"
+      "{'sampling__sampling_strategy': 0.3, 'sampling': ADASYN(random_state=123, sampling_strategy=0.3), 'logistic_regression__solver': 'liblinear', 'logistic_regression__penalty': 'l2', 'logistic_regression__C': 1.5, 'column_transformation': ColumnTransformer(transformers=[('onehotencoder', OneHotEncoder(),\n",
+      "                                 ['Customer_Type']),\n",
+      "                                ('ordinalencoder',\n",
+      "                                 OrdinalEncoder(categories=[['0', '0.2', '0.4',\n",
+      "                                                             '0.6', '0.8',\n",
+      "                                                             '1']]),\n",
+      "                                 ['SpecificHoliday']),\n",
+      "                                ('powertransformer', PowerTransformer(),\n",
+      "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x13fd3e080>)])}\n",
+      "Best parameter (CV score: 0.656):\n"
      ]
     }
    ],
    "source": [
-    "gs = (\n",
-    "    TuneHyperParams()\n",
-    "    .full_grid_search(\n",
-    "     norm_and_one_hot_model_pipeline,\n",
-    "     tuning_params\n",
-    "    )\n",
-    "    .fit_model(\n",
-    "        data.TRAINING.predictors,\n",
-    "        data.TRAINING.outcome\n",
-    "    )\n",
-    "    .get_best_scores_and_params()\n",
-    ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### TEST Score"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [],
-   "source": [
-    "final_log_model = LogisticRegression(\n",
-    "    random_state=ModelConstants.RANDOM_STATE,\n",
-    "    max_iter=ModelConstants.MAX_ITERATIONS * 10,\n",
-    "    class_weight={1: 0.6, 0: 0.4},\n",
-    "    penalty=\"l2\",\n",
-    "    C=0.1,\n",
-    "    solver=\"liblinear\"\n",
-    ")\n",
-    "\n",
-    "final_norm_model = LogisticRegression(\n",
-    "    random_state=ModelConstants.RANDOM_STATE,\n",
-    "    max_iter=ModelConstants.MAX_ITERATIONS * 10,\n",
-    "    class_weight={1: 0.55, 0: 0.45},\n",
-    "    penalty=\"l1\",\n",
-    "    C=3,\n",
-    "    solver=\"liblinear\"\n",
-    ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [],
-   "source": [
-    "final_log_model_pipeline = Pipeline(\n",
-    "    [\n",
-    "        (\"column_transformations\", log_and_ordinal_transforms),\n",
-    "        (\"logistic_regression\", final_log_model)\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "final_norm_model_pipeline = Pipeline(\n",
-    "    [\n",
-    "        (\"column_transformations\", log_and_ordinal_transforms),\n",
-    "        (\"logistic_regression\", final_norm_model)\n",
-    "    ]\n",
-    ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fit_time: 0.06392292976379395\n",
-      "score_time: 0.009336757659912109\n",
-      "test_accuracy: 0.8789783277627461\n",
-      "test_balanced_accuracy: 0.8789755099151814\n",
-      "test_f1: 0.877598760917909\n",
-      "====================================================================================================\n",
-      "fit_time: 0.6096999406814575\n",
-      "score_time: 0.00855720043182373\n",
-      "test_accuracy: 0.8774002525922387\n",
-      "test_balanced_accuracy: 0.8773973976335689\n",
-      "test_f1: 0.8750072066734464\n"
-     ]
-    }
-   ],
-   "source": [
-    "get_cross_validation_results(\n",
-    "    final_log_model_pipeline,\n",
+    "best_model = TuneHyperParams(\n",
+    ").random_grid_search(\n",
+    "    smote_column_transforms_model,\n",
+    "    tuning_params\n",
+    ").fit_model(\n",
     "    data.TRAINING.predictors,\n",
     "    data.TRAINING.outcome\n",
-    ");\n",
-    "print(\"=\"*100)\n",
-    "get_cross_validation_results(\n",
-    "    final_norm_model_pipeline,\n",
-    "    data.TRAINING.predictors,\n",
-    "    data.TRAINING.outcome\n",
-    ");"
+    ").get_best_model()\n"
    ],
    "metadata": {
     "collapsed": false
@@ -309,30 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.6614525139664804"
+      "text/plain": "                                     Test     Score\n0                                fit_time  0.267738\n1                              score_time  0.015460\n2                           test_F1 Score  0.656153\n3                           test_Accuracy  0.881811\n4                  test_Balanced Accuracy  0.817002\n5  test_Matthew's Correlation Coefficient  0.589814",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Test</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time</td>\n      <td>0.267738</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time</td>\n      <td>0.015460</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>test_F1 Score</td>\n      <td>0.656153</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>test_Accuracy</td>\n      <td>0.881811</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>test_Balanced Accuracy</td>\n      <td>0.817002</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>test_Matthew's Correlation Coefficient</td>\n      <td>0.589814</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_log_model_pipeline.fit(\n",
-    "    data.TRAINING.predictors,\n",
-    "    data.TRAINING.outcome\n",
-    ")\n",
-    "\n",
-    "predictions = final_log_model_pipeline.predict(\n",
-    "    data.TESTING.predictors\n",
-    ")\n",
-    "\n",
-    "f1_score(\n",
-    "    predictions, data.TESTING.outcome\n",
-    ")"
+    "get_cross_validation_results(best_model, data.TRAINING.predictors, data.TRAINING.outcome)"
    ],
    "metadata": {
     "collapsed": false
@@ -340,31 +233,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.6590389016018307"
+      "text/plain": "                                Test     Score\n0                           F1 Score  0.669963\n1                           Accuracy  0.890619\n2                  Balanced Accuracy  0.789773\n3  Matthew's Correlation Coefficient  0.605999",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Test</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.669963</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.890619</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.789773</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.605999</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_norm_model_pipeline.fit(\n",
-    "    data.TRAINING.predictors,\n",
-    "    data.TRAINING.outcome\n",
-    ")\n",
-    "\n",
-    "predictions = final_norm_model_pipeline.predict(\n",
-    "    data.TESTING.predictors\n",
-    ")\n",
-    "\n",
-    "f1_score(\n",
-    "    predictions, data.TESTING.outcome\n",
-    ")"
+    "get_final_model_performance(best_model, data.TRAINING, data.TESTING)"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
