--- a/multicolinearity_check.ipynb
+++ b/multicolinearity_check.ipynb
@@ -2,53 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils import (\n",
-    "    get_cross_validation_results, \n",
     "    TransactionDataset,\n",
-    "    TuneHyperParams,\n",
     ")\n",
     "\n",
-    "from constants import Resample, Columns, ModelConstants"
+    "from constants import Columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
-    "\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import OneHotEncoder, OrdinalEncoder, FunctionTransformer, Normalizer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.compose import make_column_transformer, make_column_selector\n",
-    "from sklearn.metrics import f1_score"
+    "from statsmodels.stats.outliers_influence import variance_inflation_factor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "data = TransactionDataset()\n",
@@ -60,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "data.data = pd.get_dummies(data.data, columns=[Columns.CUSTOMER_TYPE, Columns.SPECIFIC_HOLIDAY])\n",
@@ -72,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "vif_data = pd.DataFrame()\n",
@@ -84,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
