adding knn models.

--- a/model_knn_with_smote.ipynb
+++ b/model_knn_with_smote.ipynb
@@ -179,7 +179,7 @@
    "source": [
     "best_model = (\n",
     "    TuneHyperParams()\n",
-    "    .full_grid_search(\n",
+    "    .random_grid_search(\n",
     "     column_transforms_only_model,\n",
     "     tuning_params\n",
     "    )\n",
@@ -199,42 +199,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                             Metric for Training Set     Score\n0                                 fit_timemean score  0.049175\n1                               score_timemean score  0.042172\n2                       5-fold CV F1 Scoremean score  0.625417\n3                       5-fold CV Accuracymean score  0.875564\n4              5-fold CV Balanced Accuracymean score  0.789849\n5  5-fold CV Matthew's Correlation Coefficientmea...  0.552930",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_timemean score</td>\n      <td>0.049175</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_timemean score</td>\n      <td>0.042172</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Scoremean score</td>\n      <td>0.625417</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracymean score</td>\n      <td>0.875564</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracymean score</td>\n      <td>0.789849</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficientmea...</td>\n      <td>0.552930</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "get_cross_validation_results(best_model, data.TRAINING.predictors, data.TRAINING.outcome)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "              Metric for Testing Set     Score\n0                           F1 Score  0.621656\n1                           Accuracy  0.878329\n2                  Balanced Accuracy  0.768873\n3  Matthew's Correlation Coefficient  0.549505",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Testing Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.621656</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.878329</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.768873</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.549505</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "get_final_model_performance(best_model, data.TRAINING, data.TESTING)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
