--- a/model_knn_with_smote.ipynb
+++ b/model_knn_with_smote.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "data = TransactionDataset().get_training_test_split()"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "log_transform = FunctionTransformer(\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "knn_classifier = KNeighborsClassifier(\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "smote_sampling = SMOTE(random_state=ModelConstants.RANDOM_STATE)\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "column_transforms_only_model = Pipeline(\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "tuning_params = {\n",
@@ -174,8 +174,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sampling__sampling_strategy': 0.3, 'sampling': ADASYN(random_state=123, sampling_strategy=0.3), 'knn__weights': 'distance', 'knn__n_neighbors': 15, 'column_transformation': ColumnTransformer(transformers=[('onehotencoder', OneHotEncoder(),\n",
+      "                                 ['Customer_Type']),\n",
+      "                                ('ordinalencoder',\n",
+      "                                 OrdinalEncoder(categories=[['0', '0.2', '0.4',\n",
+      "                                                             '0.6', '0.8',\n",
+      "                                                             '1']]),\n",
+      "                                 ['SpecificHoliday']),\n",
+      "                                ('robustscaler', RobustScaler(),\n",
+      "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x15caabf10>)])}\n",
+      "Best parameter (CV score: 0.625):\n"
+     ]
+    }
+   ],
    "source": [
     "best_model = (\n",
     "    TuneHyperParams()\n",
@@ -191,43 +208,54 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 22,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                             Metric for Training Set     Score\n0                                 fit_timemean score  0.055133\n1                               score_timemean score  0.045694\n2                       5-fold CV F1 Scoremean score  0.625417\n3                       5-fold CV Accuracymean score  0.875564\n4              5-fold CV Balanced Accuracymean score  0.789849\n5  5-fold CV Matthew's Correlation Coefficientmea...  0.552930",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_timemean score</td>\n      <td>0.055133</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_timemean score</td>\n      <td>0.045694</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Scoremean score</td>\n      <td>0.625417</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracymean score</td>\n      <td>0.875564</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracymean score</td>\n      <td>0.789849</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficientmea...</td>\n      <td>0.552930</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_cross_validation_results(best_model, data.TRAINING.predictors, data.TRAINING.outcome)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 23,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "              Metric for Testing Set     Score\n0                           F1 Score  0.621656\n1                           Accuracy  0.878329\n2                  Balanced Accuracy  0.768873\n3  Matthew's Correlation Coefficient  0.549505",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Testing Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.621656</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.878329</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.768873</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.549505</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_final_model_performance(best_model, data.TRAINING, data.TESTING)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "outputs": [],
    "source": [],
    "metadata": {
